<resources>
    <string name="app_name">FelipeOliveira_NAC02</string>
    <string name="ultra_frete">Ultra frete mega rápido</string>
    <string name="medida_m2">Informe a medida em M2</string>
    <string name="revestimento_mosaico">Revestimento mosaico</string>
    <string name="porcelanato_perlato_branco">Porcelanato Perlato Branco</string>
    <string name="piso_albania_45x45">Piso Albania 45x45</string>
    <string name="piso_branco_baixo_brilho">Piso Branco Baixo Brilho</string>
    <string name="informe_o_material_que_deseja">Informe o material que deseja:</string>
    <string name="calcular">Calcular</string>
</resources>
