<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    tools:context=".MainActivity"
    android:background="@color/laranjito">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_o_material_que_deseja"
        android:textColor="@color/pretovisk"
        android:textSize="24sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piso_branco_baixo_brilho"
            android:id="@+id/radioBrilho"
            android:textColor="@color/pretovisk"
            android:checked="true"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piso_albania_45x45"
            android:textColor="@color/pretovisk"
            android:id="@+id/radioAlbania"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porcelanato_perlato_branco"
            android:textColor="@color/pretovisk"
            android:id="@+id/radioPerlato"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revestimento_mosaico"
            android:textColor="@color/pretovisk"
            android:id="@+id/radioMosaico"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medida_m2"
        android:textSize="24sp"
        android:textColor="@color/pretovisk"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtValor"
        android:inputType="numberDecimal"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ultra_frete"
        android:id="@+id/checkUltra"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$00.00"
            android:id="@+id/txtResultado"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="15dp"
            android:layout_below="@id/btnCalcular"
            android:textSize="24sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:id="@+id/btnCalcular"
            android:background="@drawable/my_button_bg"
            />
    </RelativeLayout>


</LinearLayout>